# reflex4arm

./: .gitignore  .gitmodules  DOCKERFILE  Dockerfile  README.md  ix.conf.sample  meson.build  meson_options.txt  run_reflex_server.sh  sample.service
.github/workflows/: ci.yml
apps/: echoserver.c  init.c  meson.build  reflex_ix_client.c  reflex_server.c
core/: cfg.c  control_plane.c  cpu.c  dpdk.c  ethfg.c  ethqueue.c  kstats.c  log.c  mbuf.c  mempool.c  meson.build  pci.c  syscall.c  tailqueue.c  timer.c  utimer.c
dp/: Makefile  ix.ld
dp/core/: cfg.c  dir.mk  dpdk.c  echoserver.c  ethqueue.c  init.c  mempool.c  reflex.h  reflex_ix_client.c  reflex_server.c  syscall.c  timer.c
dp/drivers/: nvmedev.c
dp/lwip/: inet_chksum.c  misc.c
dp/net/: arp.c  icmp.c  ip.c  net.h  tcp.c  tcp_api.c  tcp_in.c  udp.c
inc/: reflex.h
inc/arch/: chksum.h  cpu.h  perf.h
inc/asm/: chksum.h  cpu.h
inc/ix/: atomic.h  bitmap.h  byteorder.h  cfg.h  compiler.h  control_plane.h  cpu.h  dpdk.h  ethdev.h  ethfg.h  ethqueue.h  hash.h  kstats.h  kstatvectors.h  list.h  lock.h  lock_recursive.h  log.h  mbuf.h  mempool.h  pci.h  profiler.h  stddef.h  syscall.h  tailqueue.h  timer.h  types.h  utimer.h
inc/lwip/: lwipopts.h  opt.h  tcp_impl.h
inc/net/: arp.h  icmp.h  ip.h  udp.h
inc/nvme/: nvme_sw_queue.h  nvme_sw_table.h  nvme_tenant_mgmt.h  nvmedev.h
libix/: Makefile  buf.h  ix.h  ixev.c  ixev.h  ixev_timer.c  ixev_timer.h  libix_syscall.h  main.c  meson.build  syscall.h
libix/old/: libix_syscall.h
lwip/: inet_chksum.c  ip4_addr.c  memp_min.c  meson.build  misc.c  pbuf.c
net/: arp.c  dump.c  icmp.c  ip.c  meson.build  net.c  net.h  tcp.c  tcp_api.c  tcp_in.c  tcp_out.c  udp.c
nvme/: meson.build  nvme_sw_queue.c  nvme_sw_table.c  nvmedev.c  nvmedev_less.c
reflex_nbd/: flush_test.c  randread_remote.fio  reflex_nbd.c  reflex_nbd.h
scripts/: configure.sh  precondition.sh  profile.sh  run_reflex_server.sh
usertools/: IOPS.data  bench.sh  conf_setup.sh  intrin.sh  model.sh  plot.ipynb  precondition.sh  precondition_light.sh  profile.sh  results.data  run_reflex_server.sh  start.sh
usertools/openloop_perf/: Makefile  perf.c  setup.sh
